--- a/css/global.css
+++ b/css/global.css
@@ -15,7 +15,13 @@ body {
   flex-direction: column;
 }
 
-button {
+button:hover svg {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
+#button-tema,
+#button-fonte {
   position: fixed;
   bottom: 1rem;
   right: 1rem;
@@ -28,13 +34,22 @@ button {
   padding: 1rem;
 }
 
-svg {
-  color: var(--bg-color-1);
+#button-fonte {
+  transform: translateX(calc(-100% - 1rem));
+}
+
+#button-tema svg,
+#button-fonte svg {
+  fill: var(--bg-color-1);
   width: 100%;
   height: 100%;
 }
 
-button:hover svg {
-  transform: scale(1.1);
-  transition: 0.3s;
+#button-tema span,
+#button-fonte span {
+  color: var(--bg-color-1);
+  line-height: 1;
+  font-size: 2rem;
+  width: 100%;
+  height: 100%;
 }
