--- a/css/global.css
+++ b/css/global.css
@@ -10,11 +10,11 @@ body {
   color: var(--accent-color-1);
   font-family: system-ui, sans-serif;
   line-height: 1.5;
-  min-height: 100dvh;
   display: flex;
   flex-direction: column;
 }
 
+/* ----- Botões de Personalização ----- */
 button:hover svg,
 button:hover span {
   font-weight: 500;
@@ -54,4 +54,9 @@ button:hover span {
   font-size: 2rem;
   width: 100%;
   height: 100%;
+}
+
+/* ----- Seções ----- */
+section {
+  padding: 0.75rem 1.5rem;
 }
