--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,7 +1,7 @@
 /* ----- Importação de fontes ----- */
 @font-face {
   font-family: "PlayfairDisplay";
-  src: url("/assets/fonts/PlayfairDisplay-VariableFont_wght.ttf")
+  src: url("../assets/fonts/PlayfairDisplay-VariableFont_wght.ttf")
     format("truetype");
   font-weight: 100 900;
   font-style: normal;
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "PlayfairDisplay-Italic";
-  src: url("/assets/fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf")
+  src: url("../assets/fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf")
     format("truetype");
   font-weight: 100 900;
   font-style: italic;
@@ -17,7 +17,7 @@
 
 @font-face {
   font-family: "Quicksand";
-  src: url("/assets/fonts/Quicksand-VariableFont_wght.ttf") format("truetype");
+  src: url("../assets/fonts/Quicksand-VariableFont_wght.ttf") format("truetype");
   font-weight: 300 700;
   font-style: normal;
 }
