--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,23 @@ body {
   line-height: 1.5;
   display: flex;
   flex-direction: column;
+  margin-top: 1rem;
+}
+
+button {
+  padding: 1rem;
+  background-color: var(--bg-color-4);
+  border: none;
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  cursor: pointer;
+}
+
+svg {
+  fill: var(--bg-color-1);
+  width: 100%;
+  height: 100%;
 }
 
 /* ----- Botões de Personalização ----- */
@@ -38,13 +55,6 @@ button:hover span {
 
 #button-fonte {
   transform: translateX(calc(-100% - 1rem));
-}
-
-#button-tema svg,
-#button-fonte svg {
-  fill: var(--bg-color-1);
-  width: 100%;
-  height: 100%;
 }
 
 #button-tema span,
