--- a/css/global.css
+++ b/css/global.css
@@ -3,15 +3,20 @@
   margin: 0;
   box-sizing: border-box;
   scrollbar-width: smooth;
+  transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 body {
   background-color: var(--bg-color-1);
-  color: var(--accent-color-1);
+  color: var(--bg-color-4);
   font-family: system-ui, sans-serif;
   line-height: 1.5;
   display: flex;
   flex-direction: column;
+  min-height: 100dvh;
+}
+
+#div-top-spacer {
   margin-top: 1rem;
 }
 
@@ -29,6 +34,14 @@ svg {
   fill: var(--bg-color-1);
   width: 100%;
   height: 100%;
+}
+
+a:hover {
+  transform: scale(1.05);
+}
+
+button:hover {
+  background-color: var(--accent-color-3);
 }
 
 /* ----- Botões de Personalização ----- */
