--- a/css/components.css
+++ b/css/components.css
@@ -42,7 +42,7 @@
   margin: 0;
 }
 
-#header-top-bar nav {
+#header-top-bar div {
   display: flex;
   flex-direction: row;
   gap: 1rem;
@@ -53,7 +53,113 @@
   text-decoration: none;
 }
 
-#header-top-bar a:hover,
-#header-top-bar a:focus {
-  color: var(--accent-color-2);
+#header-top-bar button {
+  background-color: transparent;
+  padding: 0;
+  width: 1.5rem;
+  height: auto;
+}
+
+#header-top-bar button svg {
+  fill: var(--bg-color-4);
+}
+
+#header-top-bar button:hover svg,
+#header-top-bar button:focus-visible svg {
+  fill: var(--accent-color-2);
+}
+
+/* ----- Modal Settings Panel ----- */
+#div-settings-panel {
+  display: none; /* inicialmente escondido */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s ease;
+}
+
+#div-settings-panel.show {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#div-settings-panel .modal-content {
+  background-color: var(--bg-color-2);
+  margin: 10% auto;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  position: relative;
+  animation: fadeIn 0.3s;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#div-settings-panel .modal-title-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#div-settings-panel h2 {
+  margin: 0;
+}
+
+#div-settings-panel .close {
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#div-settings-panel .close:hover {
+  color: var(--accent-color-5);
+}
+
+#div-settings-panel .modal-content div {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+}
+
+#div-settings-panel button {
+  background-color: var(--bg-color-4);
+  border: none;
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
+  padding: 0.75rem;
+}
+
+#div-settings-panel button:hover,
+#div-settings-panel button:focus-visible {
+  background-color: var(--accent-color-5);
+}
+
+#div-settings-panel button span {
+  color: var(--bg-color-1);
+  line-height: 1;
+  font-size: 1.5rem;
+  width: 100%;
+  height: 100%;
+}
+
+/* Animação fade */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
