--- a/css/global.css
+++ b/css/global.css
@@ -21,12 +21,12 @@ body {
 }
 
 button {
-  padding: 1rem;
+  padding: 0.75rem;
   background-color: var(--bg-color-4);
   border: none;
   border-radius: 50%;
-  width: 4rem;
-  height: 4rem;
+  width: 3.5rem;
+  height: 3.5rem;
   cursor: pointer;
 }
 
@@ -36,47 +36,30 @@ svg {
   height: 100%;
 }
 
-a:hover {
+a:hover,
+a:focus-visible {
   transform: scale(1.05);
+  color: var(--accent-color-2);
 }
 
-button:hover {
-  background-color: var(--accent-color-3);
+button:hover,
+button:focus-visible {
+  transform: scale(1.05);
+  background-color: var(--accent-color-5);
 }
 
-/* ----- Botões de Personalização ----- */
 button:hover svg,
-button:hover span {
-  font-weight: 500;
+button:focus-visible svg,
+button:hover span,
+button:focus-visible span {
+  font-weight: 600;
   transform: scale(1.1);
   transition: 0.3s;
 }
 
-#button-tema,
-#button-fonte {
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-  background-color: var(--bg-color-4);
-  border: none;
-  border-radius: 50%;
-  width: 4rem;
-  height: 4rem;
-  cursor: pointer;
-  padding: 1rem;
-}
-
-#button-fonte {
-  transform: translateX(calc(-100% - 1rem));
-}
-
-#button-tema span,
-#button-fonte span {
-  color: var(--bg-color-1);
-  line-height: 1;
-  font-size: 2rem;
-  width: 100%;
-  height: 100%;
+.inactive-button {
+  background-color: var(--inactive-button-bg-color);
+  color: var(--inactive-button-color);
 }
 
 /* ----- Seções ----- */
