--- a/css/components.css
+++ b/css/components.css
@@ -69,6 +69,10 @@
   fill: var(--accent-color-2);
 }
 
+#header-top-bar #button-expand-collapse {
+  display: none;
+}
+
 /* ----- Modal Settings Panel ----- */
 #div-settings-panel {
   display: none; /* inicialmente escondido */
@@ -162,4 +166,35 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+/* ----- Responsividade ----- */
+/* Responsividade: tablets */
+@media (max-width: 768px) {
+  /* Oculta todos os links inicialmente */
+  #header-top-bar div {
+    display: none;
+  }
+
+  /* Mostra o botão de expandir/recolher */
+  #header-top-bar #button-expand-collapse {
+    display: block;
+  }
+
+  /* Mostra os links quando a Top Bar estiver expandida */
+  #header-top-bar[show-top-bar-options="true"] div {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: var(--bg-color-2);
+    padding: 0.75rem 1.5rem;
+    align-items: center;
+  }
+}
+
+/* Responsividade: celulares */
+@media (max-width: 480px) {
 }
