--- a/css/global.css
+++ b/css/global.css
@@ -66,3 +66,12 @@ button:focus-visible span {
 section {
   padding: 0.75rem 1.5rem;
 }
+
+/* ----- Responsividade ----- */
+/* Responsividade: tablets */
+@media (max-width: 768px) {
+}
+
+/* Responsividade: celulares */
+@media (max-width: 480px) {
+}
