--- a/css/components.css
+++ b/css/components.css
@@ -1,3 +1,47 @@
+/* ----- Audio Player ----- */
+#div-audio-player {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: var(--bg-color-2);
+  width: fit-content;
+  border-radius: 1rem;
+  min-width: 200px;
+  padding: 1rem;
+  margin: 0 auto;
+}
+
+#div-audio-player .img-song-cover {
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  width: 250px;
+  border-radius: 1rem;
+}
+
+#div-audio-player .div-song-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  font-size: 1.2rem;
+}
+
+#div-audio-player .span-song-title {
+  font-size: 1em;
+  color: var(--accent-color-1);
+}
+
+#div-audio-player .span-song-artist {
+  font-size: 0.8em;
+  filter: brightness(0.8);
+}
+
+#div-audio-player .div-song-controls {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
 /* ----- Top Bar ----- */
 #header-top-bar {
   position: fixed;
