--- a/css/global.css
+++ b/css/global.css
@@ -62,6 +62,17 @@ button:focus-visible span {
   color: var(--inactive-button-color);
 }
 
+/* Elemento com cursor */
+.with-cursor::after {
+  content: "|";
+  animation: blink var(--cursor-blink-speed, 600ms) steps(1, end) infinite;
+}
+
+/* Piscar */
+.blink {
+  animation: blink 600ms steps(1, end) infinite;
+}
+
 /* ----- Seções ----- */
 section {
   padding: 0.75rem 1.5rem;
